--- a/index.html
+++ b/index.html
@@ -56,6 +56,19 @@
 
         </div>
       </div>
+
+      <div class="hero-content">
+        <div class="hero-content-info">
+          <h1>Feel the taste of Japanese food</h1>
+          <p>Feel the taste of the most popular Japanese food from anywhere and anytime.</p>
+          <div class="hero-content__buttons">
+            <button class="hero-content__order-button">Order Now</button>
+            <button class="hero-content__play-button">
+              <img src="assets/play-circle.svg" alt="play">
+            </button>
+          </div>
+        </div>
+      </div>
     </section>
 
     <script src="js/script.js" type="module"></script>
